[package]
name = "simple_zlib_sarc_fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.1.8"
compress = { version = "0.2.1", features = ["zlib"], default-features = false }
ctrlc = "3.2.5"
env_logger = "0.10.0"
fuser = "0.12.0"
libc = "0.2.139"
log = "0.4.17"
roead = { version = "0.20.2", features = ["sarc"], default-features = false }
